@@ -1,10 +1,14 @@
 plugins {
     id 'java'
     id 'application'
+    id "net.ltgt.errorprone" version "4.1.0"
+    id 'jacoco'
+    id 'info.solidsoft.pitest' version '1.15.0'
 }
 
 group = 'HollowKnight'
 version = '1.0'
+
 
 repositories {
     mavenCentral()
@@ -18,13 +22,38 @@ dependencies {
     testImplementation platform('org.junit:junit-bom:5.10.0')  // JUnit BOM to handle JUnit versions
     testImplementation 'org.junit.jupiter:junit-jupiter'  // JUnit 5 Jupiter API
     testImplementation 'org.mockito:mockito-core:3.7.7'    // Mockito for mocking
-    testImplementation 'net.jqwik:jqwik:1.5.1'  // Property-based testing (jqwik)
+    testImplementation 'net.jqwik:jqwik:1.5.1'  // Property-based testing
+    errorprone "com.google.errorprone:error_prone_core:2.30.0" // to locate code smells
+
 }
 
 application {
     mainClass.set('HollowKnight.Game')
 }
 
+
 test {
-    useJUnitPlatform()  // Ensure tests use JUnit 5 platform
+    useJUnitPlatform {
+        includeEngines ('junit-jupiter', 'jqwik')
+    }
+    testLogging {
+        exceptionFormat = 'full'
+    }
+    finalizedBy jacocoTestReport
 }
+
+compileJava {
+    options.compilerArgs << "-Werror"
+}
+
+
+jacocoTestReport {
+    dependsOn test // tests are required to run before generating the report
+}
+
+pitest {
+    junit5PluginVersion = '0.12'
+    jvmArgs = ['-Xmx2g', '-Xms1g', '-XX:MaxPermSize=1g', '-XX:+UseG1GC']
+}
+
+
